UF-8978: Add circutbreaker on EWSIntegartion and some minor fixes